feat: add deleting notifs for user and add ws notifs
